fixed more bugs